--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "cors": "^2.8.4",
     "cypress": "^2.1.0",
     "express": "^4.16.3",
